--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -10,12 +10,13 @@
     </select>
   </div>
   <div class="row">
-    <ng-container *ngFor="let pro of products">
+  
       <div class="col-md-4 mb-3">
+        <ng-container for()>
         <div class="card" style="width: 18rem">
-          <img [src]="pro.image" class="card-img-top" alt="..." />
+          <img [src]="" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title">{{ pro.title }}</h5>
+            <h5 class="card-title"></h5>
             <p class="card-text">
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
@@ -26,7 +27,8 @@
             </div>
           </div>
         </div>
+      </ng-container>
       </div>
-    </ng-container>
+    
   </div>
 </div>
