--- a/src/app/carts/components/cart/cart.component.html
+++ b/src/app/carts/components/cart/cart.component.html
@@ -1,1 +1,20 @@
-<p>cart works!</p>
+<div class="row">
+  <div class="col-md-4 mb-3" > 
+    
+      <div class="card" style="width: 18rem">
+        <img [src]="products[0].image" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title mb-5">{{products[0].title}}</h5>
+          <p class="card-text">
+            {{products[0].description}}
+          </p>
+          <div class="mb-2 d-flex justify-content-between align-items-center">
+            <a href="#" class="btn btn-primary">Add To Cart</a>
+            <span>{{products[0].price}} L.E</span>
+          </div>
+        </div>
+      </div>
+    
+  </div>
+</div>
+
