--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -10,21 +10,22 @@
     </select>
   </div>
   <div class="row">
-    <div class="col-md-4 mb-3" *ngFor="let pro of products">  
+    <div class="col-md-4 mb-3" > 
+      
         <div class="card" style="width: 18rem">
-          <img [src]="pro.image" class="card-img-top" alt="..." />
+          <img [src]="products[0].image" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title"></h5>
+            <h5 class="card-title mb-2">{{products[0].title}}</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              {{products[0].description}}
             </p>
             <div class="mb-2 d-flex justify-content-between align-items-center">
               <a href="#" class="btn btn-primary">Add To Cart</a>
-              <span>50 L.E</span>
+              <span>{{products[0].price}} L.E</span>
             </div>
           </div>
         </div>
     </div>
   </div>
+  
 </div>
