--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -9,7 +9,7 @@
       <option [value]="categories[3]">{{categories[3]}}</option>
     </select>
   </div>
-  <div class="row">
+  <div class="row" *ngIf="!loading">
     <div class="col-md-4 mb-3" > 
       
         <div class="card" style="width: 16rem;height: 20rem" >
@@ -27,5 +27,7 @@
         </div>
     </div>
   </div>
-  
+  <div class="text-center w-100" *ngIf="loading">
+    <app-spinner></app-spinner>
+  </div>
 </div>
