--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -12,7 +12,7 @@
   <div class="row" *ngIf="!loading">
     <div class="col-md-4 mb-3" > 
       
-        <div class="card" style="width: 16rem;height: 20rem" >
+        <div class="card" style="width: 16rem;height: 21rem" >
           <img [src]="products[0].image" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title mb-2 ">{{products[0].title}}</h5>
@@ -27,7 +27,7 @@
         </div>
     </div>
   </div>
-  <!-- <div class="text-center w-100" *ngIf="loading">
+  <div class="text-center w-100" *ngIf="loading">
     <app-spinner></app-spinner>
-  </div> -->
+  </div>
 </div>
