--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -27,7 +27,7 @@
         </div>
     </div>
   </div>
-  <!-- <div class="text-center w-100" *ngIf="loading">
+  <div class="text-center w-100" *ngIf="loading">
     <app-spinner></app-spinner>
-  </div> -->
+  </div>
 </div>
