--- a/src/app/products/components/all-products/all-products.component.html
+++ b/src/app/products/components/all-products/all-products.component.html
@@ -9,25 +9,24 @@
       <option [value]="categories[3]">{{categories[3]}}</option>
     </select>
   </div>
-  <div class="row" *ngIf="!loading">
-    <div class="col-md-4 mb-3" > 
-      
+  <div class="row" >
+    <div class="col-md-4 mb-3" *ngFor="let pro of products"> 
         <div class="card" style="width: 16rem;height: 21rem" >
-          <img [src]="products[0].image" class="card-img-top" alt="..." />
+          <img [src]="pro.image" class="card-img-top" alt="..." />
           <div class="card-body">
-            <h5 class="card-title mb-2 ">{{products[0].title}}</h5>
+            <h5 class="card-title mb-2 ">{{pro.title}}</h5>
             <p class="card-text">
-              {{products[0].description}}
+              {{pro.description}}
             </p>
             <div class="mb-2 d-flex justify-content-between align-items-center">
               <a href="#" class="btn btn-primary">Add To Cart</a>
-              <span>{{products[0].price}} L.E</span>
+              <span>{{pro.price}} L.E</span>
             </div>
           </div>
         </div>
     </div>
   </div>
-  <div class="text-center w-100" *ngIf="loading">
+  <!-- <div class="text-center w-100" *ngIf="loading">
     <app-spinner></app-spinner>
-  </div>
+  </div> -->
 </div>
